--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,10 @@
   <title>Groceries</title>
   <base href="./">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta http-equiv="Content-Type" content="text/xhtml; charset=UTF-8" />
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
-<body>
+<body dir="ltr">
   <app-root></app-root>
 </body>
 </html>
